--- a/Entrega/01.Historia.tex
+++ b/Entrega/01.Historia.tex
@@ -1,106 +1,105 @@
-\section{INTRODUCCIÃ“N HISTÃ“RICA DEL DODECAFONISMO}\label{ch:historia}
+\section{Introducción histórica del dodecafonismo}\label{ch:historia}
+
+Vamos a comenzar con una breve historia de la disonancia. La disonancia desempeñó un papel fundamental en la génesis del dodecafonismo, como veremos enseguida. 
+
 
 \subsection{La historia de la disonancia}
-La disonancia siempre ha formado parte de las experiencias musicales. Con la mÃºsica ha venido siempre emparejada la disonancia, mano a mano, como instrumento de contraste, confrontaciÃ³n y ruptura, pero tambiÃ©n como elemento constructivo.
+La disonancia siempre ha formado parte de la experiencia musical. Con la música ha venido siempre emparejada la disonancia, mano a mano, como instrumento de contraste, confrontación y ruptura, pero también como elemento constructivo del discurso musical.
 
-En la Antigua Grecia, la armonÃ­a musical se consideraba unida al resto del universo. La rotaciÃ³n de los astros emitÃ­a sonidos armÃ³nicos, y era la armonÃ­a la que apaciguaba el alma. Â¿Pero quÃ© era la armonÃ­a, sino la uniÃ³n de consonancia y disonancia? Como dijo AristÃ³teles:
+En la Antigua Grecia, la armoní­a musical se consideraba unida al resto del universo. La rotación de los astros emití­a sonidos armónicos, y era la armoní­a la que apaciguaba el alma. Pero ¿qué era la armoní­a sino la unión de consonancia y disonancia? Como dijo Aristóteles:
 \begin{quote}
-\emph{El alma es armonÃ­a porque la armonÃ­a es mezcla y sÃ­ntesis de contrarios, y de contrarios se compone el cuerpo.}\\
+\emph{El alma es armoní­a porque la armoní­a es mezcla y sí­ntesis de contrarios, y de contrarios se compone el cuerpo.}\\
 \cita{J. de Aixquivel, \textit{Memorias de Historia Antigua}, 1989.}
 \end{quote}
+\xxx{Cualquier fuente que cites tiene que estar en la bibliografía también. Esto se aplica a todo el documento entero.}
 
-Es bien sabido que la Escuela de PitÃ¡goras, con su estudio sobre proporciones entre notas, buscaba encontrar cuÃ¡les eran los intervalos mÃ¡s consonantes. Encontraban, a su vez, aquellos que no lo eran, y es asÃ­ como se dio comienzo a la teorÃ­a de la disonancia. 
+Es bien sabido que la Escuela de Pitágoras, con su estudio sobre proporciones entre notas, buscaba encontrar cuáles eran los intervalos más consonantes. Encontraban, a su vez, aquellos que no lo eran, y es así­ como se dio comienzo a la teorí­a de la disonancia.\xxx{Sugerencia: este párrafo podría explicar un poco más la teoría de la disonancia de los pitagóricos.}
 
-Ya en la Edad Media, la polifonÃ­a fue forjando normas sobre su uso. La primera regla compositiva de la mÃºsica occidental -- segÃºn {Knud Jeppesen, \textit{Counterpoint}, 1931} -- fue la \emph{regla franconiana}, que expresaba que las disonancias debÃ­an ocurrir en la parte dÃ©bil del compÃ¡s, mientras que las consonancias en la parte fuerte. Es asÃ­ como los compositores trenzaban consonancia y disonancia al tejer los hilos de la mÃºsica.
+Ya en la Edad Media, la polifoní­a fue forjando normas sobre su uso. La primera regla compositiva de la música occidental \textemdash según Knud Jeppesen\xxx{Pon esta referencia en la sección de bibliografía; en el texto  debería aparecer como Knud Jeppesen [X]} \textemdash~fue la \emph{regla franconiana}, que expresaba que las disonancias debí­an ocurrir en la parte débil del compás, mientras que las consonancias en la parte fuerte. Es así­ como los compositores trenzaban consonancia y disonancia al tejer los hilos de la música.
 
-Poco a poco la disonancia pasÃ³ a ser usada como floritura melÃ³dica: en notas de paso, apoyaturas o retardos, entre otras. Esta funciÃ³n melÃ³dica fue impregnando el contrapunto hasta llegar a ser pieza clave en la continuidad de las voces. AdquiriÃ³ entonces una nueva funciÃ³n contrapuntÃ­stica, Â¿y quiÃ©n no se ha deleitado en escuchar una disonancia \textit{bachiana}?
+Poco a poco la disonancia pasó a ser usada como floritura melódica: en notas de paso, apoyaturas o retardos, entre otras. Esta función melódica fue impregnando el contrapunto hasta llegar a ser pieza clave en la continuidad de las voces. Adquirió entonces una nueva función contrapuntí­stica, ¿y quién no se ha deleitado al escuchar una disonancia \textit{bachiana}?
 
-Pero la disonancia estaba aÃºn inscrita a la tonalidad regente. No fue hasta la introducciÃ³n de acordes extraÃ±os que la disonancia pasÃ³ a ser el centro de atenciÃ³n. Para ello hubo que esperar hasta el siglo XIX, que fue testigo de un desarrollo del sistema armÃ³nico sin precedentes. 
+Pero la disonancia estaba aún inscrita a la tonalidad reinante. No fue hasta la introducción de acordes extraños que la disonancia pasó a ser el centro de atención. Para ello hubo que esperar hasta el siglo XIX, que fue testigo de un desarrollo del sistema armónico sin precedentes. \xxx{Más poesía aquí, más luz, más lenguaje metafórico aquí.}
+
 %
-\cite{aguirre}
+Para más información sobre la disonancia y su fascinante historia, recomendamos al lector el texto de Felipe Aguirre~\cite{aguirre}.
 
-\subsection{Wagner, Mahler y la emancipaciÃ³n de la disonancia}
-Aunque las posibilidades que prometÃ­a la tonalidad parecÃ­an inagotables, sus lÃ­mites comenzaron a percibirse hacia finales del siglo XIX. En palabras de Arnold Schoenberg:
+\subsection{Wagner, Mahler y la emancipación de la disonancia}
+Aunque las posibilidades que prometí­a la tonalidad parecí­an inagotables, sus lí­mites comenzaron a percibirse hacia finales del siglo XIX. En palabras de Arnold Schoenberg:
 \begin{quote}
-\emph{El oÃ­do se fue familiarizando gradualmente con gran nÃºmero de disonancias, hasta que llegÃ³ a perder el miedo a su efecto perturbador.}\\
+\emph{El oí­do se fue familiarizando gradualmente con gran número de disonancias, hasta que llegó a perder el miedo a su efecto perturbador.}\\
 \cita[Mencionado en]{\emph{Composition with twelve tones}, de \emph{Style and Idea}, 1950.}
 \end{quote}
 
-Esta Ã©poca culminÃ³ con los dramas musicales de Richard Wagner, en los que todos los elementos de la obra estaban detalladamente estudiados por el compositor. A este concepto lo llamaba \emph{Gesamtkunstwerk} (<<{obra de arte total}>>) -- mencionado en {\emph{Oper und Drama}, 1851} --, ya que se aseguraba personalmente de que en sus Ã³peras las artes escÃ©nicas, musicales, poÃ©ticas y visuales se combinaran entre sÃ­ a la perfecciÃ³n.
+Esta época culminó con los dramas musicales de Richard Wagner, en los que todos los elementos de la obra estaban detalladamente estudiados por el compositor. A este concepto lo llamaba \emph{Gesamtkunstwerk} (``{obra de arte total}") \textemdash mencionado en {\emph{Oper und Drama}, 1851} \textemdash, ya que se aseguraba personalmente de que en sus óperas las artes escénicas, musicales, poéticas y visuales se combinaran entre sí­ a la perfección.
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=3cm]{Richard_Wagner.jpg}\\
-{Richard Wagner\\(1813--1883)}
+\includegraphics[width=5cm]{Richard_Wagner.jpg}\\
+\caption{Richard Wagner (1813\textemdash1883); figura tomada de XXXX}
 \end{center}
 \end{figure}
+\xxx{Referencia la figura de arriba.}
 
-La idea del \emph{Gesamtkunstwerk} la desarrollÃ³ alrededor de 1850, y la plasmÃ³ en su totalidad en su ciclo de cuatro Ã³peras \href{https://www.youtube.com/watch?v=1PBhlPeTJ_g}{\textit{Der Ring des Nibelungen}}, estrenado en 1876. Wagner controlÃ³ y creÃ³ cada aspecto de la tetralogÃ­a, desde la mÃºsica hasta el libreto, el vestuario y la escenografÃ­a. Incluso mandÃ³ crear su propia sala de conciertos en Bayreuth, el \emph{Festspielhaus}, para que el escenario se adecuara a sus ideas sobre el pensamiento y la cultura musical. 
-%
-\cite{kinney}
 
-AsÃ­, a ojos de compositores posteriores, se habÃ­an agotado todas las posibilidades de la mÃºsica tonal, y quizÃ¡s ya habÃ­a comenzado el viraje hacia el predominio de la disonancia con su abundante uso del cromatismo, como en el famoso primer acorde del drama musical \href{https://www.youtube.com/watch?v=SF4zN-Okonc}{\textit{Tristan und Isolde}} (1865). Consta de las notas Fa, Si, $\mbox{Re\#}$ y $\mbox{Sol\#}$, y sus intervalos desde el Fa son una cuarta aumentada, una sexta aumentada y una novena aumentada.
+La idea del \emph{Gesamtkunstwerk} la desarrolló alrededor de 1850, y la plasmó en su totalidad en su ciclo de cuatro óperas \href{https://www.youtube.com/watch?v=1PBhlPeTJ_g}{\textit{Der Ring des Nibelungen}}, estrenado en 1876. Wagner controló y creó cada aspecto de la tetralogí­a, desde la música hasta el libreto, el vestuario y la escenografí­a. Incluso mandó crear su propia sala de conciertos en Bayreuth, el \emph{Festspielhaus}, para que el escenario se adecuara a sus ideas sobre el pensamiento y la cultura musical; véase~\cite{kinney}.
 
-DespuÃ©s de Wagner, otros compositores tambiÃ©n previeron emancipar la disonancia en sus obras. Gustav Mahler reflejaba en sus sinfonÃ­as la fragilidad de la tradiciÃ³n anterior y la inminencia de su ruptura. Ya mÃ¡s adelante, en 1911, utilizÃ³ en el \href{https://www.youtube.com/watch?v=vHyV8noUXC0}{Adagio} de su DÃ©cima SinfonÃ­a una disonancia con casi todas las doce notas de la escala cromÃ¡tica. Sin duda, la tonalidad querÃ­a ser reemplazada.
+Así­, a ojos de compositores posteriores, se habí­an agotado todas las posibilidades de la música tonal, y quizás ya habí­a comenzado el viraje hacia el predominio de la disonancia con su abundante uso del cromatismo, como en el famoso primer acorde del drama musical \href{https://www.youtube.com/watch?v=SF4zN-Okonc}{\textit{Tristan und Isolde}} (1865). Consta de las notas fa-si-$\mbox{re\#}$-$\mbox{sol\#}$, y sus intervalos desde el fa son una cuarta aumentada, una sexta aumentada y una novena aumentada.
+
+Después de Wagner, otros compositores también previeron emancipar la disonancia en sus obras. Gustav Mahler reflejaba en sus sinfoní­as la fragilidad de la tradición anterior y la inminencia de su ruptura. Ya más adelante, en 1911, utilizó en el \href{https://www.youtube.com/watch?v=vHyV8noUXC0}{Adagio} de su Décima Sinfoní­a una disonancia con casi todas las doce notas de la escala cromática. Sin duda, la tonalidad querí­a ser reemplazada.\xxx{Este párrafo suena un poco chirriante, como inglés. Escribe algo más brillante y potente.}
 %
 \cite{aguirre}
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=3cm]{Gustav_Mahler.jpg}\\
-{Gustav Mahler\\(1860--1911)}
+\includegraphics[width=5cm]{Gustav_Mahler.jpg}\\
+\caption{Gustav Mahler (1860\textemdash1911)}
 \end{center}
 \end{figure}
 
-Siguiendo la concepciÃ³n del \emph{progreso} como un camino ascendente, el paso siguiente para la composiciÃ³n musical debÃ­a consistir en deshacerse progresivamente de la tonalidad y desarrollar la <<{emancipaciÃ³n de la disonancia}>> -- mencionado tambiÃ©n en {\emph{Composition with twelve tones}} --. AsÃ­, en el marco expresionista del cambio de siglo, fue como Arnold Schoenberg ideÃ³ sus teorÃ­as del pensamiento musical, y Ã©stas dieron paso a la creaciÃ³n de la atonalidad.
+Siguiendo la concepción del \emph{progreso} como un camino ascendente, el paso siguiente para la composición musical debí­a consistir en deshacerse progresivamente de la tonalidad y desarrollar la ``{emancipación de la disonancia}"  \textemdash mencionado también en {\emph{Composition with twelve tones}} \textemdash. Así­, en el marco expresionista del cambio de siglo, fue como Arnold Schoenberg ideó sus teorí­as del pensamiento musical, y éstas dieron paso a la creación de la atonalidad.
 
 \subsection{Hacia el atonalismo de Schoenberg}
-Fuertemente influido por Wagner y Mahler desde su adolescencia, Schoenberg comenzÃ³ componiendo al estilo posromÃ¡ntico de su Ã©poca, llevando el cromatismo y la orquestaciÃ³n hasta el extremo. Sin embargo, y no espontÃ¡neamente, empezÃ³ a buscar en sus composiciones que cada sonido tuviera valor por sÃ­ mismo, un valor independiente de su funcionalidad tonal.
+Fuertemente influido por Wagner y Mahler desde su adolescencia, Schoenberg comenzó componiendo al estilo posromántico de su época, llevando el cromatismo y la orquestación hasta el extremo. Sin embargo, y no espontáneamente, empezó a buscar en sus composiciones que cada sonido tuviera valor por sí­ mismo, un valor independiente de su funcionalidad tonal.
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=3cm]{Arnold_Schoenberg.jpg}\\
-{Arnold Schoenberg\\(1874--1951)}
+\includegraphics[width=5cm]{Arnold_Schoenberg.jpg}\\
+\caption{Arnold Schoenberg (1874\textemdash1951)}
 \end{center}
 \end{figure}
-Para Ã©l, la mÃºsica no estaba intrÃ­nsecamente dirigida a una tÃ³nica. En las progresiones, lo importante era el paso de un acorde a otro, y no hacia dÃ³nde se dirigÃ­an Ã©stos. AdemÃ¡s, Ã©l opinaba que se debÃ­an poder utilizar las notas de los modos eclesiÃ¡sticos libremente, por lo que consideraba las notas no diatÃ³nicas tan vÃ¡lidas como las diatÃ³nicas. Esto hacÃ­a imposible distinguir unas de otras, no pudiendo identificar apenas la tÃ³nica. De esta, y de otras muchas formas, Schoenberg conseguÃ­a que la jerarquÃ­a tonal quedara desestabilizada.
-%
-\cite{kinney}
 
-De esta Ã©poca es su primera obra importante, \href{https://www.youtube.com/watch?v=vqODySSxYpc}{\emph{VerklÃ¤rte Nacht}} (<<{Noche transfigurada}>>), Op. 4. Compuesto en 1899, este sexteto de cuerdas estÃ¡ inspirado por el poema homÃ³nimo de Richard Dehmel. La mÃºsica, segÃºn su autor, expresa el paseo de un hombre y una mujer en medio del abrazo de la naturaleza.  Aunque en la obra aÃºn prevalece la armonÃ­a tradicional basada en acordes, Schoenberg sitÃºa al oyente en un terreno de indefiniciÃ³n tonal, no sÃ³lo en el plano armÃ³nico sino tambiÃ©n en el melÃ³dico. AdemÃ¡s, hace uso del acorde de novena invertido, inexistente hasta entonces y, por tanto, rechazado por la crÃ­tica.
-%
-\cite{diaz}
+Para él, la música no estaba intrí­nsecamente dirigida a una tónica. En las progresiones, lo importante era el paso de un acorde a otro, y no hacia dónde se dirigí­an estos. Además, él opinaba que se debí­an poder utilizar las notas de los modos eclesiásticos libremente, por lo que consideraba las notas no diatónicas tan válidas como las diatónicas. Esto hací­a imposible distinguir unas de otras, y apenas se podía identificar la tónica. De esta, y de otras muchas formas, Schoenberg conseguí­a que la jerarquí­a tonal quedara desestabilizada~\cite{kinney}.
 
-Tras pasar por la etapa tonal posromÃ¡ntica, y debido a su convicciÃ³n en la irrevocabilidad de la evoluciÃ³n de la mÃºsica hacia el cromatismo total, en 1908 Schoenberg se desligÃ³ de la tonalidad completamente con el ciclo de canciones \href{https://www.youtube.com/watch?v=3iXsKhaZB2Q}{\emph{Das Buch der HÃ¤ngenden GÃ¤rten}}. 
+De esta época es su primera obra importante, \href{https://www.youtube.com/watch?v=vqODySSxYpc}{\emph{Verklärte Nacht}} ({\it Noche transfigurada}), Op. 4. Compuesto en 1899, este sexteto de cuerdas está inspirado por el poema homónimo de Richard Dehmel. La música, según su autor, expresa el paseo de un hombre y una mujer en medio del abrazo de la naturaleza.  Aunque en la obra aún prevalece la armoní­a tradicional basada en acordes, Schoenberg sitúa al oyente en un terreno de indefinición tonal, no sólo en el plano armónico sino también en el melódico. Además, hace uso del acorde de novena invertido, inexistente hasta entonces y, por tanto, rechazado por la crí­tica~\cite{diaz}.
 
-A partir de entonces se dedicÃ³ a componer fragmentos muy breves cuya estructura era definida por motivos y no por la armonÃ­a. Era esto lo que solÃ­a ocurrir en formas musicales anteriores como la forma sonata. A este periodo en sus composiciones se le llama \emph{atonalidad libre}, aunque cabe destacar que Schoenberg rechazaba fervientemente este tÃ©rmino:
+Tras pasar por la etapa tonal posromántica, y debido a su convicción en la inexorabilidad de la evolución de la música hacia el cromatismo total, en 1908 Schoenberg se desligó de la tonalidad completamente con el ciclo de canciones \href{https://www.youtube.com/watch?v=3iXsKhaZB2Q}{\emph{Das Buch der Hängenden Gärten}}. 
+
+A partir de entonces se dedicó a componer fragmentos muy breves cuya estructura era definida por motivos y no por la armoní­a. Era esto lo que solí­a ocurrir en formas musicales anteriores como la forma sonata. A este periodo en sus composiciones se le llama \emph{atonalidad libre}, aunque cabe destacar que Schoenberg rechazaba fervientemente este término:
 
 \begin{quote}
-\emph{La expresiÃ³n ``mÃºsica atonal'' es de lo mÃ¡s desafortunada -- es como llamar a volar ``el arte de no caer'' o nadar ``el arte de no ahogarse''.}\\
+\emph{La expresión ``música atonal'' es de lo más desafortunada \textemdash es como llamar a volar ``el arte de no caer'' o nadar ``el arte de no ahogarse''.}\\
 \cita[Mencionado en]{A. Schoenberg, \emph{Hauer's Theories}, en \emph{Style and Idea}, 1923.}
 \end{quote}
 
-A este periodo -- es de 1912 -- pertenece tambiÃ©n su famoso ciclo de canciones \href{https://www.youtube.com/watch?v=vQVkbKULKpI}{\emph{Pierrot Lunaire}}, Op. 21. Su nombre completo es ``Tres veces siete poemas de Pierrot Lunaire de Albert Giraud'', ya que estÃ¡ dividida en 3 grupos de 7 canciones cada uno, cuyos textos son una selecciÃ³n de 21 poemas del ciclo homÃ³nimo de Albert Giraud. 
+\noindent A este periodo  pertenece también su famoso ciclo de canciones \href{https://www.youtube.com/watch?v=vQVkbKULKpI}{\emph{Pierrot Lunaire}}, Op. 21. Su nombre completo es {\it Tres veces siete poemas de Pierrot Lunaire de Albert Giraud}, ya que está dividida en 3 grupos de 7 canciones cada uno, cuyos textos son una selección de 21 poemas del ciclo homónimo de Albert Giraud. 
 
-Se encuentran en ella abundantes referencias al nÃºmero 7: Schoenberg hace un uso extensivo de motivos de 7 notas a lo largo de la obra, mientras que el conjunto musical que la interpreta, incluyendo al director, consta de 7 miembros. De hecho, a este conjunto de instrumentos -- flauta, clarinete, violÃ­n, violonchelo, piano y cantante -- se le ha dado el nombre de \textit{ensemble Pierrot} en su honor. 
+Se encuentran en ella abundantes referencias al número 7. Schoenberg hace un uso extensivo de motivos de 7 notas a lo largo de la obra, mientras que el conjunto musical que la interpreta, incluyendo al director, consta de 7 miembros. De hecho, a este conjunto de instrumentos \textemdash flauta, clarinete, violí­n, violonchelo, piano y voz \textemdash~se le ha dado el nombre de \textit{ensemble Pierrot} en su honor.  Otros números importantes en la obra son el 3 y el 13. Cada poema consta de 13 lí­neas, mientras que la primera lí­nea de cada poema aparece 3 veces: en las lí­neas 1, 7 y 13.
 
-Otros nÃºmeros importantes en la obra son el 3 y el 13. Cada poema consta de 13 lÃ­neas, mientras que la primera lÃ­nea de cada poema aparece 3 veces: en las lÃ­neas 1, 7 y 13.
+En esta obra no sólo hay una ausencia total de relaciones tonales, sino que el tratamiento vocal evita también cualquier relación estética con las técnicas tradicionales: es un \emph{Sprechgesang}, un canto hablado. De hecho, Schoenberg se refiere a estas piezas no como canciones, sino como melodramas. Véase~\cite{diaz} para más información.
 
-En esta obra no sÃ³lo hay una ausencia total de relaciones tonales, sino que el tratamiento vocal evita tambiÃ©n cualquier relaciÃ³n estÃ©tica con las tÃ©cnicas tradicionales: es un \emph{Sprechgesang}, un canto hablado. De hecho, Schoenberg se refiere a estas piezas no como canciones, sino como melodramas.
-%
-\cite{diaz}
+\subsection{El surgimiento del sistema dodecafónico}
+Schoenberg no estaba aún satisfecho con su técnica compositiva, ya que admiraba las obras extensas de los músicos románticos y pensaba que su atonalidad no podí­a sostener una obra de gran envergadura. Es decir, necesitaba un hilo conductor mejor que los motivos para poder componer obras atonales más largas.
 
-\subsection{El surgimiento del sistema dodecafÃ³nico}
-Schoenberg no estaba aÃºn satisfecho con su tÃ©cnica compositiva, ya que admiraba las obras extensas de los mÃºsicos romÃ¡nticos y pensaba que su atonalidad no podÃ­a sostener una obra de gran envergadura. Es decir, necesitaba un hilo conductor mejor que los motivos para poder componer obras atonales mÃ¡s largas.
+Por aquella época sufrió  crisis en varios aspectos de su vida. En lo personal, su mujer Matilde Zemlinsky acababa de abandonarlo por otro hombre, aunque posteriormente volverí­a junto al compositor. Y en lo profesional, sus obras no eran del gusto del público, por lo que no contaba con suficiente dinero para mantener a su familia. Todas estas circunstancias, unidas al desarrollo de la Primera Guerra Mundial, no le permitieron componer apenas entre 1914 y 1923.
 
-AdemÃ¡s, por aquella Ã©poca sufriÃ³ una crisis en muchos aspectos de su vida. En lo personal, su mujer Matilde Zemlinsky acababa de abandonarlo por otro hombre, aunque posteriormente volverÃ­a junto al compositor. Y, en lo profesional, sus obras no eran del gusto del pÃºblico, por lo que no contaba con suficiente dinero para mantener a su familia. Todas estas circunstancias, unidas al desarrollo de la Primera Guerra Mundial, no le permitieron componer apenas entre 1914 y 1923.
+Tras el final de la guerra, en 1919, Schoenberg fundó la Sociedad para Interpretaciones Musicales Privadas junto a sus discí­pulos y amigos Alban Berg y Anton Webern. Schoenberg, Berg y Webern se autodenominaron la Segunda Escuela de Viena en honor al grupo de compositores del siglo XVIII Haydn, Mozart y Beethoven, quienes formaban la Primera Escuela de Viena.
 
-Tras el final de la guerra, en 1919, Schoenberg fundÃ³ la Sociedad para Interpretaciones Musicales Privadas junto a sus discÃ­pulos y amigos Alban Berg y Anton Webern. Schoenberg, Berg y Webern se autodenominaron la Segunda Escuela de Viena en honor al grupo de compositores del siglo XVIII Haydn, Mozart y Beethoven, quienes formaban la Primera Escuela de Viena.
+En la Sociedad para Interpretaciones Musicales Privadas se presentaban músicas contemporáneas en circunstancias que favorecieran su adecuada apreciación. Así­ se evitaba que dichas obras, al no ser entendidas por el público, fueran inmediatamente rechazadas. Las obras de compositores como Mahler, Debussy, Bartók, Ravel, Strauss y Stravinsky fueron incluidas en los programas de conciertos organizados por la Sociedad.
 
-En la Sociedad para Interpretaciones Musicales Privadas se presentaban mÃºsicas contemporÃ¡neas en circunstancias que favorecieran su adecuada apreciaciÃ³n. AsÃ­ se evitaba que dichas obras, al no ser entendidas por el pÃºblico, fueran inmediatamente rechazadas. Las obras de compositores como Mahler, Debussy, BartÃ³k, Ravel, Strauss y Stravinsky fueron incluidas en los programas de conciertos organizados por la Sociedad.
+En este contexto Schoenberg pudo reflexionar sobre sus técnicas compositivas, y al fin publicó en 1923 su ensayo \emph{Método de composición con doce sonidos}\xxx{Pon la referencia bibliográfica}, donde se describí­an por primera vez los axiomas del dodecafonismo. Estos axiomas constituían la solución al problema de la atonalidad libre que tanto le habí­a estado atormentando durante una década.
 
-En este contexto Schoenberg pudo reflexionar sobre sus tÃ©cnicas compositivas, y al fin publicÃ³ en 1923 su ensayo \emph{MÃ©todo de composiciÃ³n con doce sonidos}, donde se describÃ­an por primera vez los axiomas del dodecafonismo: la soluciÃ³n al problema de la atonalidad libre que le habÃ­a estado atormentando durante una dÃ©cada.
+Su primera obra í­ntegramente dodecafónica, publicada también en 1923, es la \href{https://www.youtube.com/watch?v=bQHR_Z8XVvI}{Suite para piano} Op. 25.\xxx{Sugerencia: yo pondría los vídeos en el centro de la página, al menos los más importantes.} Es la pieza más temprana en la que Schoenberg usa series dodecafónicas en cada uno de los movimientos. En dos obras anteriores a ella usa series dodecafónicas, pero en movimientos aislados: la Op. 23, \href{https://www.youtube.com/watch?v=7A9HSlgDlQE}{\emph{5 St\"ucke}} (1920\textemdash23), en el movimiento de Waltz final; y su \href{https://www.youtube.com/watch?v=fzAFalLbXxg}{Serenata}, Op. 24, en su Soneto central.
 
-Su primera obra Ã­ntegramente dodecafÃ³nica, publicada tambiÃ©n en 1923, es la \href{https://www.youtube.com/watch?v=bQHR_Z8XVvI}{Suite para piano} Op. 25. Es la pieza mÃ¡s temprana en la que Schoenberg usa series dodecafÃ³nicas en cada uno de los movimientos. En dos obras anteriores a ella usa series dodecafÃ³nicas, pero en movimientos aislados: la Op. 23, \href{https://www.youtube.com/watch?v=7A9HSlgDlQE}{\emph{5 St\"ucke}} (1920--23), en el movimiento de Waltz final; y su \href{https://www.youtube.com/watch?v=fzAFalLbXxg}{Serenata}, Op. 24, en su Soneto central.
+Las series utilizadas en la Suite Op. 25 servirán de ejemplo en este texto, y su tercer movimiento, \href{https://www.youtube.com/watch?v=scwNtGdop6w}{Musette}, será estudiado y analizado en el apartado \ref{musette} con el fin de entender una obra dodecafónica en toda su extensión.
 
-Las series utilizadas en la Suite Op. 25 servirÃ¡n de ejemplo en este texto, y su tercer movimiento, \href{https://www.youtube.com/watch?v=scwNtGdop6w}{Musette}, serÃ¡ estudiado y analizado en el apartado \ref{musette} con el fin de entender una obra dodecafÃ³nica en toda su extensiÃ³n.
