--- a/Entrega/03.Suite.tex
+++ b/Entrega/03.Suite.tex
@@ -1,58 +1,56 @@
-\section{AN√ÅLISIS DE UNA OBRA DODECAF√ìNICA: OP. 25}\label{ch:suite}
+\section{An·lisis de una obra dodecafÛnica: el opus 25}\label{ch:suite}
 	\subsection{Series de la Suite op. 25}
-		Lo primero que har√° un compositor dodecaf√≥nico antes de empezar a componer ser√° escoger su serie original. Su elecci√≥n nunca es una simple cuesti√≥n de azar; al contrario, ya que las singularidades de la serie dar√°n un car√°cter especial a toda la obra. Por ejemplo, el compositor puede escoger una serie con simetr√≠as, y as√≠ tendr√° series repetidas entre su espectro serial. Tambi√©n puede tener simetr√≠as internas solo en un fragmento de tres o cuatro notas, y de este modo podr√° el compositor oscilar entre varias series del espectro que se parezcan entre s√≠.
+		Lo primero que har· un compositor dodecafÛnico antes de empezar a componer ser· escoger su serie original. Su elecciÛn nunca es una simple cuestiÛn de azar; al contrario, ya que las singularidades de la serie dar·n un car·cter especial a toda la obra. Por ejemplo, el compositor puede escoger una serie con simetrÌas, y asÌ tendr· series repetidas entre su espectro serial. TambiÈn puede tener simetrÌas internas solo en un fragmento de tres o cuatro notas, y de este modo podr· el compositor oscilar entre varias series del espectro que se parezcan entre sÌ. Para un estudio m·s completo de las relaciones de similitud entre series se recomienda \emph{On the Similarity of Twelve-Tone Rows}, de Tuukka Ilom‰ki \cite{ilomaki}.
 		
-		({Para un estudio m√°s completo de las relaciones de similitud entre series se recomienda \emph{On the Similarity of Twelve-Tone Rows}, de Tuukka Ilom√§ki \cite{ilomaki}.})
-		
-		En la Suite para Piano Op. 25, Schoenberg escoge su serie $\sigma$ para resaltar el intervalo de tritono (6 semitonos). A continuaci√≥n se observan en negrita los intervalos entre las notas de esta serie, en unidad de semitono:
+		En la Suite para Piano Op. 25, Schoenberg escoge su serie $\sigma$ para resaltar el intervalo de tritono (6 semitonos). A continuaciÛn se observan en negrita los intervalos entre las notas de esta serie, en unidad de semitono:
 		
 		{$\left(\begin{array}{*{24}c}
 			0&&1&&2&&3&&4&&5&&6&&7&&8&&9&&10&&11&\\
 			4&\mathbf{1}&5&\mathbf{2}&7&\mathbf{6}&1&\mathbf{5}&6&\mathbf{9}&3&\mathbf{5}&8&\mathbf{6}&2&\mathbf{9}&11&\mathbf{1}&0&\mathbf{9}&9&\mathbf{1}&10&\mathbf{6}\end{array}\right)$}
 				
-		Presenta repeticiones triples de los intervalos de tritono (6), de sexta mayor (9) y de segunda menor o semitono (1): los intervalos m√°s disonantes; una repetici√≥n doble de cuarta justa (5), y un intervalo de segunda mayor (2); adem√°s de una consecuci√≥n de intervalos repetida: 9 -- 1 -- 9 -- 1. Como se forma el intervalo de tritono al enlazar la serie original con una serie que empiece por la misma nota, se tiene en cuenta el intervalo de tritono (6) al final. En el dodecafonismo se evitan deliberadamente los intervalos de tercera mayor (4), ya que estos son la base de la eludida armon√≠a tonal. \label{serie25}
+		Presenta repeticiones triples de los intervalos de tritono (6), de sexta mayor (9) y de segunda menor o semitono (1): los intervalos m·s disonantes; una repeticiÛn doble de cuarta justa (5), y un intervalo de segunda mayor (2); adem·s de una consecuciÛn de intervalos repetida: 9--1--9--1. Como se forma el intervalo de tritono al enlazar la serie original con una serie que empiece por la misma nota, se tiene en cuenta el intervalo de tritono (6) al final. En el dodecafonismo se evitan deliberadamente los intervalos de tercera mayor (4), ya que estos son la base de la eludida armonÌa tonal. \label{serie25}
 		
-		El intervalo de tritono tiene la particularidad de no modificarse en la inversi√≥n y transportaci√≥n k = 6, por lo que estos intervalos aparecen en los lugares originales, mientras que en los procedimientos de retrogradaci√≥n y retrogradaci√≥n inversa ocupan sus lugares en retr√≥grado. En particular, Schoenberg utiliza entre los seis movimientos de la Suite solamente las ocho series de todo el espectro serial que cumplen estos requisitos: T$^0$, T$^6$, I, IT$^6$, R, RT$^6$, RI y RIT$^6$, que podemos observar %en el Anexo \ref{app:series}, p√°gina \pageref{app:series}.
-		a continuaci√≥n:
+		El intervalo de tritono tiene la particularidad de no modificarse en la inversiÛn y transportaciÛn k = 6, por lo que estos intervalos aparecen en los lugares originales, mientras que en los procedimientos de retrogradaciÛn y retrogradaciÛn inversa ocupan sus lugares en retrÛgrado. En particular, Schoenberg utiliza entre los seis movimientos de la Suite solamente las ocho series de todo el espectro serial que cumplen estos requisitos: $T^0$, $T^6$, $I$, $IT^6$, $R$, $RT^6$, $RI$ y $RIT^6$, que podemos observar %en el Anexo \ref{app:series}, p·gina \pageref{app:series}.
+		a continuaciÛn:
 		
 		\input{Anexos/Series.tex}
 		
-		Estas series tienen muchos elementos en com√∫n: todas comienzan o acaban por Mi$\natural$ o por Si$\flat$, lo que permite enlazar unas series con otras por medio del un√≠sono o del tritono; se mantienen los intervalos de tritono en sus lugares originales o retr√≥grados, y coinciden en las dos primeras y las dos √∫ltimas notas dos a dos.
+		Estas series tienen muchos elementos en com˙n: todas comienzan o acaban por Mi$\natural$ o por Si$\flat$, lo que permite enlazar unas series con otras por medio del unÌsono o del tritono; se mantienen los intervalos de tritono en sus lugares originales o retrÛgrados, y coinciden en las dos primeras y las dos ˙ltimas notas dos a dos.
 		
-		Se han realizado estudios -- como el de Martha Hyde \cite{hyde} -- en los que se limitan las series utilizadas en la Suite a cuatro: T$^0$, T$^6$, I e IT$^6$, pero ya que el objetivo de este texto no es analizar la obra entera se dejar√° esta cuesti√≥n para an√°lisis posteriores.
+		Se han realizado estudios -- como el de Martha Hyde \cite{hyde} -- en los que se limitan las series utilizadas en la Suite a cuatro: $T^0$, $T^6$, $I$ e $IT^6$, pero ya que el objetivo de este texto no es analizar la obra entera se dejar· esta cuestiÛn para an·lisis posteriores.
 		
-	\subsection{Descripci√≥n de la Suite op. 25}
-		Schoenberg realiza en la serie $\sigma$ una partici√≥n triple; es decir, la serie se divide en tres tetracordios, y cada uno de ellos contiene un intervalo de tritono. El √∫ltimo tetracordio, si se retrograda, consta de las notas 10 -- 9 -- 0 -- 11, que en notaci√≥n germ√°nica es la secuencia BACH. Esto puede ser un homenaje al compositor Johann Sebastian Bach (1685--1750), ya que Schoenberg admiraba a los grandes compositores anteriores a √©l por las estructuras formales de sus obras.
+	\subsection{DescripciÛn de la Suite op. 25}
+		Schoenberg realiza en la serie $\sigma$ una particiÛn triple; es decir, la serie se divide en tres tetracordios, y cada uno de ellos contiene un intervalo de tritono. El ˙ltimo tetracordio, si se retrograda, consta de las notas 10 -- 9 -- 0 -- 11, que en notaciÛn germ·nica es la secuencia BACH. Esto puede ser un homenaje al compositor Johann Sebastian Bach (1685--1750), ya que Schoenberg admiraba a los grandes compositores anteriores a Èl por las estructuras formales de sus obras.
 		%
 		\cite{xiao}
 		
-		Otro posible homenaje a Bach y sus contempor√°neos barrocos es precisamente la forma de la obra: es una Suite, g√©nero cultivado durante los siglos XVII y XVIII que se compone de una variedad de danzas. La Suite de Schoenberg est√° formada por seis danzas: un Preludio, una Gavota, una Musette, un Intermezzo -- que no tiene influencia barroca sino m√°s bien de Brahms, otro modelo para Schoenberg --, un Minueto con Tr√≠o y una Giga. Adem√°s, el estilo, la textura -- contrapunt√≠stica, t√≠picamente barroca -- y la estructura de cada danza se corresponden con los estilos, texturas y estructuras de las danzas hom√≥nimas del periodo bachiano.
+		Otro posible homenaje a Bach y sus contempor·neos barrocos es precisamente la forma de la obra: es una Suite, gÈnero cultivado durante los siglos XVII y XVIII que se compone de una variedad de danzas. La Suite de Schoenberg est· formada por seis danzas: un Preludio, una Gavota, una Musette, un Intermezzo -- que no tiene influencia barroca sino m·s bien de Brahms, otro modelo para Schoenberg --, un Minueto con TrÌo y una Giga. Adem·s, el estilo, la textura -- contrapuntÌstica, tÌpicamente barroca -- y la estructura de cada danza se corresponden con los estilos, texturas y estructuras de las danzas homÛnimas del periodo bachiano.
         
-        Por ser √©sta su primera obra totalmente dodecaf√≥nica, Schoenberg la utiliz√≥ como una muestra al mundo de las posibilidades de su nuevo m√©todo compositivo. Fue tambi√©n por lo que tom√≥ un formato tan variado como una Suite: as√≠ pod√≠a en una misma obra componer con estilos tan distintos como los de las distintas danzas.
+        Por ser Èsta su primera obra totalmente dodecafÛnica, Schoenberg la utilizÛ como una muestra al mundo de las posibilidades de su nuevo mÈtodo compositivo. Fue tambiÈn por lo que tomÛ un formato tan variado como una Suite: asÌ podÌa en una misma obra componer con estilos tan distintos como los de las distintas danzas.
         
-        Al componer la obra, Schoenberg trata cada tetracordio como una subunidad individual. Los superpone contra otras series del espectro tambi√©n divididas, o utiliza sus notas como un solo acorde cuatr√≠ada. Estas divisiones no s√≥lo sirven para hacer la serie m√°s reconocible o a√±adir cohesi√≥n a la obra, sino que adem√°s facilitan el desarrollo de la serie espec√≠ficamente en el estilo de cada danza.
+        Al componer la obra, Schoenberg trata cada tetracordio como una subunidad individual. Los superpone contra otras series del espectro tambiÈn divididas, o utiliza sus notas como un solo acorde cuatrÌada. Estas divisiones no sÛlo sirven para hacer la serie m·s reconocible o aÒadir cohesiÛn a la obra, sino que adem·s facilitan el desarrollo de la serie especÌficamente en el estilo de cada danza.
 		
-	\subsection{An√°lisis de la Musette}
+	\subsection{An·lisis de la Musette}
 	\label{musette}
-		En el tercer movimiento de la Suite, la Musette, Schoenberg recrea la danza barroca que toma su nombre del instrumento hom√≥nimo: la \emph{cornamusa}, de la familia de la gaita. La m√∫sica compuesta para estos instrumentos suele consistir en una melod√≠a acompa√±ada por una nota pedal, que se traduce aqu√≠ en la presencia de un bord√≥n sobre el Sol$\natural$ (nota 7). Esta nota se extrae de cada una de las series utilizadas y se forma con ella un ostinato r√≠tmico en la mano izquierda del piano. Con el resto de sonidos de cada serie, Schoenberg vuelve a emular el estilo de la danza barroca y articula un discurso polif√≥nico a dos voces con ritmos esencialmente cortos.
+		En el tercer movimiento de la Suite, la Musette, Schoenberg recrea la danza barroca que toma su nombre del instrumento homÛnimo: la \emph{cornamusa}, de la familia de la gaita. La m˙sica compuesta para estos instrumentos suele consistir en una melodÌa acompaÒada por una nota pedal, que se traduce aquÌ en la presencia de un bordÛn sobre el Sol$\natural$ (nota 7). Esta nota se extrae de cada una de las series utilizadas y se forma con ella un ostinato rÌtmico en la mano izquierda del piano. Con el resto de sonidos de cada serie, Schoenberg vuelve a emular el estilo de la danza barroca y articula un discurso polifÛnico a dos voces con ritmos esencialmente cortos.
 		
-		A partir de la doble barra del comp√°s 9, el Re$\flat$ (nota 1) acompa√±a a Sol$\natural$ y ambos crean un doble bord√≥n en la mano izquierda. La elecci√≥n de esas dos notas est√° estrechamente relacionada con la tradicional relaci√≥n de quinta justa formada por Sol$\natural$ y Re$\natural$ en la m√∫sica tonal. Schoenberg sustituye las quintas justas tonales por los tritonos dodecaf√≥nicos, subrayando a√∫n m√°s su <<emancipaci√≥n de la disonancia>>.
+		A partir de la doble barra del comp·s 9, el Re$\flat$ (nota 1) acompaÒa a Sol$\natural$ y ambos crean un doble bordÛn en la mano izquierda. La elecciÛn de esas dos notas est· estrechamente relacionada con la tradicional relaciÛn de quinta justa formada por Sol$\natural$ y Re$\natural$ en la m˙sica tonal. Schoenberg sustituye las quintas justas tonales por los tritonos dodecafÛnicos, subrayando a˙n m·s su <<emancipaciÛn de la disonancia>>.
 		
-		Adem√°s de las similitudes texturales, r√≠tmicas y arm√≥nicas, la Musette de Schoenberg comparte estructura formal con las danzas barrocas. Y esta semejanza es quiz√°s la m√°s notable, ya que fue la b√∫squeda de estructura formal lo que inspir√≥ a Schoenberg a desarrollar su m√©todo compositivo. La Musette barroca, como todos los movimientos de danza, presenta una estructura binaria con simetr√≠a tonal: empieza y acaba por la misma tonalidad, mientras que el centro es zona de desarrollo. Schoenberg despoja de funcionalidad tonal a esa simetr√≠a, madre de la forma sonata, y la aplica a su composici√≥n dodecaf√≥nica.
+		Adem·s de las similitudes texturales, rÌtmicas y armÛnicas, la Musette de Schoenberg comparte estructura formal con las danzas barrocas. Y esta semejanza es quiz·s la m·s notable, ya que fue la b˙squeda de estructura formal lo que inspirÛ a Schoenberg a desarrollar su mÈtodo compositivo. La Musette barroca, como todos los movimientos de danza, presenta una estructura binaria con simetrÌa tonal: empieza y acaba por la misma tonalidad, mientras que el centro es zona de desarrollo. Schoenberg despoja de funcionalidad tonal a esa simetrÌa, madre de la forma sonata, y la aplica a su composiciÛn dodecafÛnica.
 		
-		En este movimiento se pueden diferenciar a simple vista tres secciones, divididas en los compases 9 y 20, debido a cambios de textura, figuraci√≥n y tempo. En la segunda secci√≥n se le a√±ade melod√≠a a la mano izquierda del piano, dejando m√°s camuflado el bord√≥n que en la primera secci√≥n, adem√°s de que √©ste se vuelve doble, mientras que vuelve a aparecer claramente en la tercera secci√≥n. Tambi√©n en la segunda secci√≥n aparece una nueva figuraci√≥n, que es la semicorchea; y, por √∫ltimo, en los dos compases de divisi√≥n aparecen dos \emph{a tempo}, que marcan el final de las dos primeras secciones tras dos zonas de variabilidad r√≠tmica.
+		En este movimiento se pueden diferenciar a simple vista tres secciones, divididas en los compases 9 y 20, debido a cambios de textura, figuraciÛn y tempo. En la segunda secciÛn se le aÒade melodÌa a la mano izquierda del piano, dejando m·s camuflado el bordÛn que en la primera secciÛn, adem·s de que Èste se vuelve doble, mientras que vuelve a aparecer claramente en la tercera secciÛn. TambiÈn en la segunda secciÛn aparece una nueva figuraciÛn, que es la semicorchea; y, por ˙ltimo, en los dos compases de divisiÛn aparecen dos \emph{a tempo}, que marcan el final de las dos primeras secciones tras dos zonas de variabilidad rÌtmica.
 		%
 		\cite{clercq}
 		
-		Para que esta estructura tr√≠ptica sea una forma binaria, la primera y la √∫ltima parte deben mantener un parecido, que se observa a trav√©s del an√°lisis de las series utilizadas en el movimiento. Estas series son T$^0$, T$^6$, I e IT$^6$.
+		Para que esta estructura trÌptica sea una forma binaria, la primera y la ˙ltima parte deben mantener un parecido, que se observa a travÈs del an·lisis de las series utilizadas en el movimiento. Estas series son T$^0$, T$^6$, I e IT$^6$.
 		
-		En la Musette, Schoenberg hace un uso casi absoluto de la tripartici√≥n serial, hasta el punto de individualizar los tetracordios por separado y concederles privilegios seriales, como la retrogradaci√≥n. Por ejemplo, en el comp√°s 7, en la voz inferior de la mano derecha aparece el tetracordio 4 -- 5 -- 2 -- 3, que es o bien el primer tetracordio de RIT$^6$ o la retrogradaci√≥n del tercer tetracordio de IT$^6$, mientras que los otros dos tetracordios de IT$^6$, 10 -- 9 -- 7\footnote{La nota 7 aparece como bord√≥n y no en la misma voz que el resto del tetracordio, por lo que su posici√≥n es tambi√©n excepcional.} -- 1 en la voz superior y 8 -- 11 -- 6 -- 0 en la mano izquierda, aparecen en el orden correcto. Entonces no se puede analizar el comp√°s como RIT$^6$, sino indicar que hay una alteraci√≥n puntual de IT$^6$.
+		En la Musette, Schoenberg hace un uso casi absoluto de la triparticiÛn serial, hasta el punto de individualizar los tetracordios por separado y concederles privilegios seriales, como la retrogradaciÛn. Por ejemplo, en el comp·s 7, en la voz inferior de la mano derecha aparece el tetracordio 4 -- 5 -- 2 -- 3, que es o bien el primer tetracordio de RIT$^6$ o la retrogradaciÛn del tercer tetracordio de IT$^6$, mientras que los otros dos tetracordios de IT$^6$, 10 -- 9 -- 7\footnote{La nota 7 aparece como bordÛn y no en la misma voz que el resto del tetracordio, por lo que su posiciÛn es tambiÈn excepcional.} -- 1 en la voz superior y 8 -- 11 -- 6 -- 0 en la mano izquierda, aparecen en el orden correcto. Entonces no se puede analizar el comp·s como RIT$^6$, sino indicar que hay una alteraciÛn puntual de IT$^6$.
 		
-		Por tanto, es muy complicado analizar esta obra en su totalidad, ya que la flexibilidad en la ordenaci√≥n de los tetracordios puede generar situaciones muy ambiguas. Debido a estas fragmentaciones y a las variadas combinaciones de tetracordios originales y retr√≥grados, se escucha un √°rea de desarrollo hacia la secci√≥n media del movimiento. En cambio, las series al principio y al final de la pieza se presentan casi √≠ntegramente, como una exposici√≥n y reexposici√≥n. He aqu√≠ un v√≠nculo con la simetr√≠a de las formas binarias tonales.
+		Por tanto, es muy complicado analizar esta obra en su totalidad, ya que la flexibilidad en la ordenaciÛn de los tetracordios puede generar situaciones muy ambiguas. Debido a estas fragmentaciones y a las variadas combinaciones de tetracordios originales y retrÛgrados, se escucha un ·rea de desarrollo hacia la secciÛn media del movimiento. En cambio, las series al principio y al final de la pieza se presentan casi Ìntegramente, como una exposiciÛn y reexposiciÛn. He aquÌ un vÌnculo con la simetrÌa de las formas binarias tonales.
 		%
 		\cite{clercq}
 		
-		Es m√°s, incluso el orden de las series utilizadas en la primera y en la √∫ltima secci√≥n coinciden, exceptuando dos repeticiones consecutivas y las series T$^0$ finales, que act√∫an como una cadencia serial:
+		Es m·s, incluso el orden de las series utilizadas en la primera y en la ˙ltima secciÛn coinciden, exceptuando dos repeticiones consecutivas y las series T$^0$ finales, que act˙an como una cadencia serial:
 		
 		\[\begin{array}{*{12}c}
 			\mathbf{c}.\mathbf{1}&\text{T}^0&\text{IT}^6&\text{T}^6&\text{I}&\text{T}^0&\text{I}&\text{T}^6&
@@ -65,8 +63,22 @@
 				\end{matrix}
 			&\text{T}^6&\text{IT}^6&\text{T}^0&\text{T}^0&\mathbf{c}.\mathbf{31}\\\end{array}\]
 		
-		A continuaci√≥n se encuentra el an√°lisis serial completo de la Musette:
-		
-		\includegraphics[width=15cm]{9.jpg}
-		
-		\includegraphics[width=15cm]{10.jpg}
+		A continuaciÛn se encuentra el an·lisis serial completo de la Musette:\xxx{Probablemente, es mucho trabajo, pero dirÌa de cambiar los colores. No se ven bien en la pantalla, en especial el amarillo. Al menos, cambiarÌa las letras del encabezado a letras con la silueta negra. Otra opciÛn es poner en el encabezado un fondo oscuro y que asÌ se vean mejor. En realidad, en la partitura se ven bien los colores.}
+
+\newpage
+\begin{figure}[!h]
+\begin{center}
+\includegraphics[width=14.5cm]{9.jpg}\\
+\caption{An·lisis de la Musette (I)}
+\end{center}
+\end{figure}
+$\,$
+
+
+\newpage
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics[width=14.5cm]{10.jpg}\\
+\caption{An·lisis de la Musette (II)}
+\end{center}
+\end{figure}		
