--- a/Entrega/Referencias.tex
+++ b/Entrega/Referencias.tex
@@ -1,11 +1,12 @@
 \renewcommand\refname{Referencias}
+\bibliographystyle{alpha}
 	\begin{thebibliography}{00}
 			
 %			\subsubsection*{\autoref{ch:historia}}
 
 			\bibitem{aguirre}
 			{ Aguirre, Felipe.} 
-			\textit{El concepto de <<disonancia>> en Adorno y en la nueva mÃºsica} (2019). Consultado en agosto de 2019.
+			\textit{El concepto de ``disonancia" en Adorno y en la nueva música} (2019). Consultado en agosto de 2019.
 			\\\url{http://www.felipeaguirre.co/blog/2019/1/28/el-concepto-de-disonancia-en-adorno-y-en-la-nueva-musica}
 			
 			\bibitem{kinney}
@@ -17,10 +18,10 @@
 			\\\url{https://digital.sandiego.edu/honors_theses/1}
 			
 			\bibitem{diaz}
-			{ DÃ­az de la Fuente, Alicia.} 
-			\textit{Estructura y significado en la mÃºsica serial y aleatoria},
-			Universidad Nacional de EducaciÃ³n a Distancia.
-			Tesis Doctoral en FilosofÃ­a.
+			{ Díaz de la Fuente, Alicia.} 
+			\textit{Estructura y significado en la música serial y aleatoria},
+			Universidad Nacional de Educación a Distancia.
+			Tesis Doctoral en Filosofía.
 			(2005)
 			\\\url{https://www2.uned.es/dpto_fim/publicaciones/alicia_1.pdf}		
 			
@@ -34,16 +35,30 @@
 			\\\url{http://www.ubu.com/papers/Boulez-Schoenberg+Is+Dead.pdf}
 			
 			\bibitem{dominguez}
-			{ DomÃ­nguez Romero, Manuel.} 
-			\textit{Las MatemÃ¡ticas en el Serialismo Musical},
+			{ Domínguez Romero, Manuel.} 
+			\textit{Las Matemáticas en el Serialismo Musical},
 			Sigma n.24, 93-98.
 			(2004)
 			\\\url{http://www.hezkuntza.ejgv.euskadi.eus/r43-573/es/contenidos/informacion/dia6_sigma/es_sigma/adjuntos/sigma_24/6_Serialismo_musical.pdf}
 
+
+\bibitem[Góm-1]{gom-1}
+Paco Gómez.
+\newblock \textit{Mathematics and Computation in Music 2019}: un congreso interdisciplinar
+\newblock
+  \url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18184:98-junio-2019-mathematics-and-computation-in-music-2019-un-congreso-interdisciplinar&catid=67:ma-y-matemcas&directory=67},
+  consultado en agosto de 2019.
+  
+  \bibitem[Góm-2]{gom-2}
+Paco Gómez.
+\newblock \textit{Crónica del congreso Mathematics and Computation in Music 2019}
+\newblock
+  \url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18206:99-agosto-2019-cronica-del-congreso-mathematics-and-computation-in-music-2019&catid=67:ma-y-matemcas&directory=67},
+  consultado en agosto de 2019.
 %			\subsubsection*{\autoref{ch:suite}}
 			
 			\bibitem{ilomaki}
-			{ IlomÃ¤ki, Tuukka.}
+			{ Ilomäki, Tuukka.}
 			\textit{On the Similarity of Twelve-Tone Rows},
 			Sibelius Academy.
 			(2008)
